--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "globals": "^15.8.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.15.0",
     "vite": "^5.3.1"
   }
 }
