--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
     "eslint": "^9.6.0",
     "globals": "^15.8.0",
     "typescript": "^5.2.2",
